fix spec copy-paste button visibilty issue on pdf export

--- a/assets/webidl.css
+++ b/assets/webidl.css
@@ -76,6 +76,12 @@ a.idlEnumItem {
   font-weight: bold;
 }
 
+@media print {
+  .respec-button-copy-paste {
+    display: hidden;
+  }
+}
+
 .respec-button-copy-paste:focus {
   text-decoration: none;
   border-color: #51a7e8;
